# django-gcp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  ATTRIBUTION.md  CLAUDE.md  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.developer-example.yml  docker-compose.yml  postattach.sh
.github/workflows/: cd.yml  ci.yml  codeql.yml  release.yml  test-and-publish.yml  update-pull-request.yml  update_pr.yml
django_gcp/: __init__.py  admin.py  apps.py  exceptions.py  models.py  routing.py  settings.py  signals.py  urls.py
django_gcp/events/: signals.py  utils.py  views.py
django_gcp/logging/: __init__.py  structured_logs.py
django_gcp/logs/: __init__.py  error_reporting.py  structured_logs.py
django_gcp/management/commands/: cleanup_tmp_files.py  task_manager.py
django_gcp/metadata/: __init__.py  metadata.py
django_gcp/static/django_gcp/: cloud_object_widget.css  cloud_object_widget.js
django_gcp/storage/: __init__.py  admin.py  blob_utils.py  compress.py  fields.py  forms.py  gcloud.py  operations.py  settings.py  utils.py  widgets.py
django_gcp/tasks/: __init__.py  _patch_cloud_scheduler.py  _patch_cloud_tasks.py  helpers.py  manager.py  serializers.py  tasks.py  utils.py  views.py
django_gcp/tasks/_pilot/: README.md  app_engine.py  base.py  exceptions.py  mocker.py  pubsub.py  resource.py  scheduler.py  tasks.py
django_gcp/templates/django_gcp/: cloud_object_widget.html
django_gcp/templates/django_gcp/contrib/unfold/: cloud_object_widget.html
django_gcp/templates/unfold/contrib/django_gcp/: cloud_object_readonly_widget.html  cloud_object_widget.html
django_gcp/workflows/: __init__.py  exceptions.py  workflows.py
docs/: requirements.txt  watch.py
docs/source/: .gitignore  api.rst  authentication.rst  authentication_events_and_tasks.rst  authentication_server.rst  cloud_run.rst  conf.py  events.rst  examples.rst  getting_started.rst  index.rst  installation.rst  license.rst  logging.rst  logs.rst  project.rst  quick_start.rst  storage.rst  tasks.rst  tasks_about.rst  tasks_settings.rst  tasks_usage.rst  tasks_workers.rst  version_history.rst  workflows.rst  workflows_about.rst  workflows_tips.rst  workflows_usage.rst
rabid_armadillo/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  signals.py
terraform/: .gitignore  README.md  iam.tf  iam_project_level_bindings.tf  iam_service_accounts.tf  iam_workload_identity_federation.tf  main.tf  services.tf  storage.tf  tasks.tf  variables.tf  workflows.tf
terraform/workflows/: sample_workflow.yml
tests/: apps.py  asgi.py  models.py  settings.py  test_events.py  test_events_utils.py  test_my_consumer.py  test_my_model.py  test_storage.py  test_storage_field_migrations.py  test_storage_fields.py  test_storage_operations.py  test_storage_utils.py  test_tasks_commands.py  test_tasks_enqueuing.py  test_tasks_utils.py  test_tasks_views.py  test_workflows.py  urls.py
tests/migrations/: 0001_initial.py
tests/server/: settings.py  settings_ci.py  urls.py
tests/server/example/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py  workflows.py
tests/server/example/management/commands/: _base.py  try_failing_on_demand_task.py  try_subscription_task.py  try_successful_on_demand_task.py
tests/server/example/migrations/: 0001_initial.py  0002_exampleblobfieldmodel_blob_temp.py  0003_remove_exampleblobfieldmodel_blob.py  0004_rename_blob_temp_exampleblobfieldmodel_blob.py  0005_examplecallbackblobfieldmodel_and_more.py  0006_examplemultipleblobfieldmodel.py  0007_exampleneveroverwriteblobfieldmodel_and_more.py  0008_exampleupdateattributesblobfieldmodel.py
tests/server/example/templates/: workflow_tester.html
