[tool.poetry]
name = "django-gcp"
version = "0.12.1"
description = "Utilities to run Django on Google Cloud Platform"
authors = ["Tom Clark"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
repository = "https://github.com/octue/django-gcp"
keywords = ["django", "google", "cloud", "run", "gcloud", "gcp", "storage", "tasks", "events", "pubsub"]
packages = [{ include = "django_gcp" },]


[tool.poetry.dependencies]
Django = ">=3.0,<5"
python = ">=3.9,<4"
django-app-settings = "^0.7.1"
python-dateutil = "^2.8.2"
google-api-python-client = "^2"
google-auth = "^2.6.0"
google-cloud-error-reporting = "^1.9.0"
google-cloud-pubsub = "^2"
google-cloud-scheduler = "^2"
google-cloud-storage = "^2.7.0"
google-cloud-tasks = "^2"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.0"
django-json-widget = "^1.1.1"
django-test-migrations = "^1.2.0"
notebook = "^6.5.3"
pre-commit = "^2.17.0"
psycopg2-binary = "^2.9.3"
pylint-django = "^2.5.3"
pytest = "^7.0.0"
pytest-asyncio = "^0.17.2"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.4"
pytest-django = "^4.5.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-tabs = "^3.2.0"
Sphinx = "^4.4.0"
throttle = "^0.2.2"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"
tox-poetry = "^0.4.1"
watchdog = "^2.1.9"

[tool.poetry.group.dev.dependencies]
django-unfold = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
