[tool.poetry]
name = "django-gcp"
version = "0.18.2"
description = "Utilities to run Django on Google Cloud Platform"
authors = ["Tom Clark"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
repository = "https://github.com/octue/django-gcp"
keywords = ["django", "google", "cloud", "run", "gcloud", "gcp", "storage", "tasks", "events", "pubsub"]
packages = [{ include = "django_gcp" },]


[tool.poetry.dependencies]
Django = ">=4.0,<5.1"
python = ">=3.9,<4"
django-app-settings = "^0.7.1"
python-dateutil = "^2.8.2"
google-api-python-client = "^2"
google-auth = "^2.6.0"
google-cloud-error-reporting = "^1.9.0"
google-cloud-pubsub = "^2"
google-cloud-scheduler = "^2"
google-cloud-storage = ">=2.7, <4"
google-cloud-tasks = "^2"

[tool.poetry.group.dev.dependencies]
django-unfold = "^0.49.1"
ruff = "^0.11.11"
coverage = "^7.6"
django-debug-toolbar = "^5.0.1"
django-extensions = "^3.2.0"
django-json-widget = "^1.1.1"
django-test-migrations = "^1.2.0"
notebook = "^6.5.3"
pre-commit = "^2.17.0"
psycopg2-binary = "^2.9.3"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"
pytest-django = "^4.10.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-tabs = "^3.2.0"
Sphinx = "^4.4.0"
throttle = "^0.2.2"
tox = "^4.23.2"
watchdog = "^2.1.9"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes
select = ["E", "F"]
# Ignore E501 line-too-long - see https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black for why
ignore = ["F405", "E501", "E203", "E731", "E721", "N818"]
# Disable fix for unused imports (`F401`) which annoyingly removes your work-in-progress on save
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "app", "amy", "api", "nibbler", "settings", "test", "utils", "strands", "people"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow variables from use of `import *` in settings files
"backend/settings*" = ["F403", "F405"]
# Prevent undefined errors when declaring lazy types
#     LazyUserType = Annotated["UserType", lazy("people.graphql.users.types")]
"*/types.py" = ["F821"]
"*/mutations.py" = ["F821"]
"*/queries.py" = ["F821"]
"*/filters.py" = ["F821"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
