[project]
name = "django-gcp"
version = "0.22.2"
description = "Utilities to run Django on Google Cloud Platform"
authors = [{name="Tom Clark"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["django", "google", "cloud", "run", "gcloud", "gcp", "storage", "tasks", "events", "pubsub"]
requires-python = ">=3.10,<4"

dependencies = [
"Django>=4.0,<5.1",
"django-app-settings>0.7,<0.8",
"python-dateutil>=2,<3",
"google-api-python-client>=2,<3",
"google-auth>=2.6,<3",
"google-cloud-error-reporting>=1.9,<2",
"google-cloud-pubsub>=2,<3",
"google-cloud-scheduler>=2,<3",
"google-cloud-storage>=2,<4",
"google-cloud-tasks>=2,<3",
"google-cloud-workflows>=1,<2",
"werkzeug>=3,<4",
"pyopenssl>=25.1,<26",
]

[project.urls]
Changelog = "https://github.com/octue/django-gcp/releases"
Documentation = "https://django-gcp.readthedocs.io/"
Homepage = "https://github.com/octue/django-gcp"
Issues = "https://github.com/octue/django-gcp/issues"
Repository = "https://github.com/octue/django-gcp"

[dependency-groups]
dev = [
"django-unfold>=0.49.1,<0.50",
"ruff>=0.14,<0.15",
"coverage>=7.6,<8",
"django-debug-toolbar>5.0,<6",
"django-extensions>=3.2.0,<4",
"django-json-widget>=1.1.1,<2",
"django-test-migrations>1.2.0,<2",
"notebook>=6.5.3,<7",
"pre-commit>=2.17.0,<3",
"psycopg2-binary>=2.9.3,<3",
"pytest>=8.3.4,<9",
"pytest-asyncio>=0.25.3,<0.26",
"pytest-cov>=6.0.0,<7",
"pytest-sugar>=1,<2",
"pytest-django>=4.10,<5",
"sphinx-rtd-theme>=1,<2",
"sphinx-tabs>=3.2.0,<4",
"Sphinx>=4.4.0,<5",
"throttle>=0.2.2,<0.3",
"tox>=4.23.2,<5",
"watchdog>=2.1.9,<3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes
select = ["E", "F"]
# Ignore E501 line-too-long - see https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black for why
ignore = ["F405", "E501", "E203", "E731", "E721", "N818"]
# Disable fix for unused imports (`F401`) which annoyingly removes your work-in-progress on save
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["django_gcp", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow variables from use of `import *` in settings files
"tests/server/settings*" = ["F403", "F405"]

[tool.setuptools]
packages = [
  "django_gcp",
  "django_gcp.events",
  "django_gcp.logs",
  "django_gcp.management",
  "django_gcp.management.commands",
  "django_gcp.metadata",
  "django_gcp.storage",
  "django_gcp.tasks",
  "django_gcp.tasks._pilot",
  "django_gcp.workflows",
]

[tool.setuptools.package-data]
django_gcp = ["py.typed"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]
